@@ -1,4 +1,12 @@
-﻿w17 01.02.2016 16:53:33 +0300 - build 4529
+﻿drkns 01.02.2016 23:00:10 +0200 - build 4530
+
+1. Оптимизация 4525 для System.WindowMode = true
+
+2. System.WindowMode теперь true по умолчанию, ибо:
+   - это хорошо;
+   - нужно тестирование.
+
+w17 01.02.2016 16:53:33 +0300 - build 4529
 
 1. M#3161: Extend GoTo (AltF8)
 
